--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>io.cubita</groupId>
     <artifactId>generator-all</artifactId>
-    <version>3.3.1</version>
+    <version>3.3.1.RC1</version>
 
     <dependencies>
 
